// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recommendations Admin API Can add a full recommendation 1: [body] 1`] = `
Object {
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": "Dogs are cute",
      "favicon": "https://dogpictures.com/favicon.ico",
      "featured_image": "https://dogpictures.com/dog.jpg",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": true,
      "reason": "Because dogs are cute",
      "title": "Dog Pictures",
      "updated_at": null,
      "url": "https://dogpictures.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can add a full recommendation 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "354",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/recommendations\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can add a minimal recommendation 1: [body] 1`] = `
Object {
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": null,
      "title": "Dog Pictures",
      "updated_at": null,
      "url": "https://dogpictures.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can add a minimal recommendation 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "263",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/recommendations\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can add a recommendation 1: [body] 1`] = `
Object {
  "recommendations": Array [
    Object {
      "createdAt": "2023-08-29T09:11:34.985Z",
      "excerpt": null,
      "favicon": null,
      "featuredImage": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "oneClickSubscribe": false,
      "reason": null,
      "title": "Dog Pictures",
      "url": "https://dogpictures.com",
    },
  ],
}
`;

exports[`Recommendations Admin API Can add a recommendation 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "240",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": "http://127.0.0.1:2369/ghost/api/admin/recommendations/64edb646b9e7dfdd2cc931ac/",
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can browse 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 0",
      "title": "Recommendation 0",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation0.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can browse 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "386",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can delete recommendation 1: [body] 1`] = `Object {}`;

exports[`Recommendations Admin API Can delete recommendation 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can edit recommendation 1: [body] 1`] = `
Object {
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": "Cats are cute",
      "favicon": "https://catpictures.com/favicon.ico",
      "featured_image": "https://catpictures.com/cat.jpg",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Because cats are cute",
      "title": "Cat Pictures",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://dogpictures.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can edit recommendation 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "377",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can fetch recommendations when there are none 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 1,
      "pages": 0,
      "prev": null,
      "total": 0,
    },
  },
  "recommendations": Array [],
}
`;

exports[`Recommendations Admin API Can fetch recommendations when there are none 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "109",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can fetch recommendations with relations when there are no recommendations 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 1,
      "pages": 0,
      "prev": null,
      "total": 0,
    },
  },
  "recommendations": Array [],
}
`;

exports[`Recommendations Admin API Can fetch recommendations with relations when there are no recommendations 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "109",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can fetch recommendations with relations when there are none 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 1,
      "pages": 0,
      "prev": null,
      "total": 0,
    },
  },
  "recommendations": Array [],
}
`;

exports[`Recommendations Admin API Can fetch recommendations with relations when there are none 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "109",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can include click and subscribe counts 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 5,
    },
  },
  "recommendations": Array [
    Object {
      "count": Object {
        "clicks": 2,
        "subscribers": 3,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 4",
      "title": "Recommendation 4",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation4.com/",
    },
    Object {
      "count": Object {
        "clicks": 3,
        "subscribers": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 3",
      "title": "Recommendation 3",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation3.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
        "subscribers": 2,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 2",
      "title": "Recommendation 2",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation2.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
        "subscribers": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 1",
      "title": "Recommendation 1",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation1.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
        "subscribers": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 0",
      "title": "Recommendation 0",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation0.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can include click and subscribe counts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1683",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can include click counts 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": 2,
      "page": 1,
      "pages": 4,
      "prev": null,
      "total": 16,
    },
  },
  "recommendations": Array [
    Object {
      "count": Object {
        "clicks": 2,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": "Dogs are cute",
      "favicon": "https://dogpictures.com/favicon.ico",
      "featured_image": "https://dogpictures.com/dog.jpg",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": true,
      "reason": "Because dogs are cute",
      "title": "Dog Pictures",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://dogpictures.com/",
    },
    Object {
      "count": Object {
        "clicks": 3,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 14",
      "title": "Recommendation 14",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation14.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 13",
      "title": "Recommendation 13",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation13.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 12",
      "title": "Recommendation 12",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation12.com/",
    },
    Object {
      "count": Object {
        "clicks": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 11",
      "title": "Recommendation 11",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation11.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can include click counts 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1690",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can include click counts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1690",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can request pages 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": 2,
      "page": 1,
      "pages": 2,
      "prev": null,
      "total": 15,
    },
  },
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 14",
      "title": "Recommendation 14",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation14.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 13",
      "title": "Recommendation 13",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation13.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 12",
      "title": "Recommendation 12",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation12.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 11",
      "title": "Recommendation 11",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation11.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 10",
      "title": "Recommendation 10",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation10.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 9",
      "title": "Recommendation 9",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation9.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 8",
      "title": "Recommendation 8",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation8.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 7",
      "title": "Recommendation 7",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation7.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 6",
      "title": "Recommendation 6",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation6.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 5",
      "title": "Recommendation 5",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation5.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can request pages 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2902",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Can request pages 3: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 10,
      "next": null,
      "page": 2,
      "pages": 2,
      "prev": 1,
      "total": 15,
    },
  },
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 4",
      "title": "Recommendation 4",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation4.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 3",
      "title": "Recommendation 3",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation3.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 2",
      "title": "Recommendation 2",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation2.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 1",
      "title": "Recommendation 1",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation1.com/",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": "Reason 0",
      "title": "Recommendation 0",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "https://recommendation0.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Can request pages 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1497",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Cannot add the same recommendation twice 1: [body] 1`] = `
Object {
  "recommendations": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "excerpt": null,
      "favicon": null,
      "featured_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "one_click_subscribe": false,
      "reason": null,
      "title": "Dog Pictures",
      "updated_at": null,
      "url": "https://dogpictures.com/",
    },
  ],
}
`;

exports[`Recommendations Admin API Cannot add the same recommendation twice 2: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "A recommendation with this URL already exists.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Validation error, cannot save recommendation.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Recommendations Admin API Cannot edit to invalid recommendation state 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Featured image must be a valid URL",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Validation error, cannot edit recommendation.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Recommendations Admin API Cannot edit to invalid recommendation state 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "265",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Cannot use invalid protocols when editing 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Featured image must be a valid URL",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Validation error, cannot edit recommendation.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Recommendations Admin API Cannot use invalid protocols when editing 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "265",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Uses default limit of 5 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1495",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Recommendations Admin API Uses default limit of 15 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1573",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
